# WebKitRequirements

./: .drone.jsonnet  .drone.star  .drone.yml  .gitattributes  .gitignore  .reqcheck.yml  BUILD.md  BUILDBOT.md  Build-RequirementSource.ps1  Delete-PthreadHeaders.ps1  Delete-ShareDirectory.ps1  Download-VcpkgTools.ps1  Export-Requirements.ps1  Get-CFLite.ps1  Get-RequirementSource.ps1  Install-Requirements.ps1  Install-Vcpkg.ps1  LICENSE.txt  PATCHES.md  Package-RequirementSource.ps1  Package-Requirements.ps1  Patch-RequirementSource.ps1  README.md  RELEASING.md  Release-Requirements.ps1  Release-WinCairoRequirements.ps1  Remove-Requirements.ps1  Rename-WithBitSuffix.ps1  Run-All.ps1  WinCairoRequirements.json  WindowsRequirements.json  build.libsonnet
.github/workflows/: build.yaml  build.yml  reqcheck.yml
patches/: PATCHES.md
patches/cairo/: CMakeLists.txt  Configure_features.cmake  config.h.cmake  features.h.cmake
patches/cairo/cmake/: FindFontconfig.cmake  FindPixman.cmake
patches/cairo/src/: CMakeLists.txt  sources.cmake
patches/icu/: CMakeLists.txt
patches/libressl/crypto/: CMakeLists.txt
patches/libressl/ssl/: CMakeLists.txt
patches/libxml2/: CMakeLists.txt
patches/libxslt/: CMakeLists.txt
patches/libxslt/libxslt/: xsltconfig.h.cmake.in
patches/pixman/: CMakeLists.txt
patches/pixman/cmake/: arch_configure.cmake  cmake_package.cmake
patches/pixman/pixman/: CMakeLists.txt
patches/psl/: CMakeLists.txt
patches/pthreads/: CMakeLists.txt
patches/sqlite/: CMakeLists.txt
ports/boringssl/: CONTROL  portfile.cmake  vcpkg.json
ports/boringssl/patches/: 0001-Find-threading-library.patch  0001-Make-gtest-library-static.patch  0002-Adjust-CMake-for-vcpkg.patch  0002-Make-gtest-library-static.patch  0002-Specify-all-library-install-destinations.patch  0003-Make-building-tests-optional.patch  0003-Make-gtest-library-static.patch  0004-Adjust-CMake-for-vcpkg.patch  0004-Make-building-tools-optional.patch  0005-Add-install-targets.patch  0005-Make-building-tests-optional.patch  0006-Make-building-tools-optional.patch  0006-Use-the-correct-function-types-in-X509V3_EXT_METHODs.patch  0007-Fix-build-with-MSVC-2022.patch
ports/brotli/: CONTROL  portfile.cmake  vcpkg.json
ports/brotli/patches/: 0001-Make-cli-optional.patch  0001-Remove-static-target.patch  0002-Add-__has_declspec_attribute.patch
ports/c-ares/: CONTROL  portfile.cmake  vcpkg.json
ports/c-ares/patches/: 0001-Adjust-CMake-for-vcpkg.patch
ports/cairo/: CONTROL  portfile.cmake  vcpkg.json
ports/cairo/patches/: 0001-Add-CMake-build.patch  0001-Rename-stat-to-stats.patch  0002-Rename-stat-to-stats.patch  0002-boilerplate-Use-_cairo_malloc-instead-of-malloc.patch  0002-steal-boxes-Fix-an-invalid-free-exposed-by-cb871c6c.patch  0003-Add-a-bounds-check-to-cairo_cff_parse_charstring.patch  0003-Win32-surface-compositor-should-support-DWrite-font.patch  0003-win32-font-Ignore-GetGlyphOutlineW-failure.patch  0004-Don-t-leave-a-font-face-an-error-state-after-a-scale.patch  0004-Slightly-improve-dealing-with-error-snapshots.patch  0004-doc-Fix-dwrite-gtk-doc-warnings.patch  0005-Add-a-bounds-check-to-cairo_cff_font_read_fdselect.patch  0005-Fix-scaled_glyph-hash-lookup-on-Win64.patch  0005-doc-fix-cairo_dwrite_font_face_set_rendering_params-.patch  0006-Avoid-a-use-after-free.patch  0006-DWrite-More-accurate-glyph-paths-for-small-fonts.patch  0007-Avoid-a-use-after-scope.patch  0007-DWrite-Don-t-convert-subpixel-antialiasing-to-graysc.patch  0008-DWrite-glyph-surfaces-should-take-subpixel-positions.patch  0008-Fix-undefined-left-shifts.patch  0009-DWrite-clipped-glyphs-in-win32-compositor.patch  0009-Fix-out-of-bounds-access-in-cairo_type1_font_subset_.patch  0010-Fix-cairo_matrix_transform_distance-documentation.patch  0010-Fix-memory-leak-in-cairo_cff_font_read_cid_fontdict.patch  (+6 more)
ports/cflite/: CONTROL  portfile.cmake  vcpkg.json
ports/curl/: 0001-cpool-cshutdown-force-close-connections-under-pressu.patch  CONTROL  portfile.cmake  vcpkg.json
ports/freetype/: CONTROL  portfile.cmake  vcpkg.json
ports/harfbuzz/: CONTROL  portfile.cmake  vcpkg.json
ports/highway/: CONTROL  portfile.cmake  vcpkg.json
ports/icu/: CONTROL  portfile.cmake  vcpkg.json  vcpkg_acquire_icu_tools.cmake
ports/lcms/: CONTROL  portfile.cmake  vcpkg.json
ports/libavif/: disable-source-utf8.patch  find-dependency.patch  vcpkg.json
ports/libjpeg-turbo/: CONTROL  portfile.cmake  vcpkg.json  vcpkg_acquire_gnuwin32_program.cmake
ports/libjxl/: CONTROL  portfile.cmake  vcpkg.json
ports/libpng/: CONTROL  portfile.cmake  vcpkg.json
ports/libpsl/: CONTROL  portfile.cmake  psl.cmake  vcpkg.json
ports/libressl/: CONTROL  portfile.cmake  vcpkg.json
ports/libwebp/: CONTROL  portfile.cmake  vcpkg.json
ports/libxml2/: CONTROL  portfile.cmake  vcpkg.json
ports/libxslt/: CONTROL  portfile.cmake  vcpkg.json
ports/libyuv/: cmake.diff  vcpkg.json
ports/nghttp2/: CONTROL  portfile.cmake  vcpkg.json
ports/nghttp3/: CONTROL  portfile.cmake  vcpkg.json
ports/ngtcp2/: CONTROL  portfile.cmake  vcpkg.json
ports/openjpeg/: CONTROL  portfile.cmake  vcpkg.json
ports/openssl/: portfile.cmake  vcpkg.json
ports/pixman/: CONTROL  portfile.cmake  vcpkg.json
ports/psl/: CONTROL  portfile.cmake
ports/pthreads/: portfile.cmake  vcpkg.json
ports/sqlite3/: CONTROL  portfile.cmake  vcpkg.json
ports/vcpkg-cmake-webkit/: portfile.cmake  vcpkg-port-config.cmake  vcpkg.json  vcpkg_cmake_config_fixup_webkit.cmake  vcpkg_fixup_pkgconfig_webkit.cmake
ports/vcpkg-tool-meson/: 0001-Detect-clang-cl-by-binary-name-on-non-Windows-hosts.patch  0002-Pass-fuse-ld-to-clang-cl-for-correct-linker-selectio.patch  portfile.cmake  vcpkg_configure_meson.cmake
ports/woff2/: CONTROL  portfile.cmake  vcpkg.json
ports/zlib/: CONTROL  portfile.cmake  vcpkg.json
triplets/: x64-windows-webkit.cmake  x86-windows-webkit.cmake
versions/: baseline.json
versions/c-/: cairo.json  curl.json
versions/i-/: icu.json
versions/o-/: openssl.json
versions/v-/: vcpkg-tool-meson.json
versions/z-/: zlib.json
(+144 files in other folders)
